tests/snapshots/format__junit_test_all_pass.snap
---
source: tests/format.rs
expression: out
---
<?xml version="1.0" encoding="UTF-8"?>
<testsuites name="rlsspec test" tests="16" skipped="0" failures="0" errors="0">
    <testsuite name="notes" tests="8" skipped="0" errors="0" failures="0">
        <testcase name="alice select all" classname="notes"/>
        <testcase name="alice insert deny" classname="notes"/>
        <testcase name="alice update deny" classname="notes"/>
        <testcase name="alice delete deny" classname="notes"/>
        <testcase name="guest select deny" classname="notes"/>
        <testcase name="guest insert deny" classname="notes"/>
        <testcase name="guest update deny" classname="notes"/>
        <testcase name="guest delete deny" classname="notes"/>
    </testsuite>
    <testsuite name="tags" tests="8" skipped="0" errors="0" failures="0">
        <testcase name="alice select rows: tenant_id = &apos;00000000-0000-4000-8000-00000000000a&apos;" classname="tags"/>
        <testcase name="alice insert deny" classname="tags"/>
        <testcase name="alice update deny" classname="tags"/>
        <testcase name="alice delete deny" classname="tags"/>
        <testcase name="guest select deny" classname="tags"/>
        <testcase name="guest insert deny" classname="tags"/>
        <testcase name="guest update deny" classname="tags"/>
        <testcase name="guest delete deny" classname="tags"/>
    </testsuite>
</testsuites>
